# CipherFinder

./: .gitignore  CMakeLists.txt  README.md  build_and_install.sh  main.cpp  test.sh
include/: cipher_finder.h
src/: cipher_finder.cpp
tests/: test.cpp
tests/test_files/: test1.txt
